# Chat-HW-Project

./: .gitignore  CMakeLists.txt  Chat  README.md  svave.cpp
include/: autorization.h  chat.h  chatPrivate.h  chathared.h  database.h  exept.h  interactionChatHared.h  interactionChatPrvate.h  template.h  user.h
src/: autorization.cpp  chat.cpp  chatPrivate.cpp  chathared.cpp  database.cpp  interactionChatHared.cpp  interactionChatPrvate.cpp  main.cpp  user.cpp
